--- a/src/components/pages/Main/main.css
+++ b/src/components/pages/Main/main.css
@@ -1,12 +1,18 @@
 .main {
   width: 100%;
-  background-color: rgb(32, 9, 54);
+  /* background-color: rgb(32, 9, 54); */
+  margin-bottom: 50px;
 }
 .main__title {
   font-size: 5em;
   padding: 40px;
 }
-
+.main__list {
+  text-align: center;
+}
+.main__list > li {
+  margin-bottom: 1em;
+}
 @media (max-width: 527px) {
   .main__title {
     font-size: 3em;
