--- a/src/components/pages/Header/Header.css
+++ b/src/components/pages/Header/Header.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
   display: flex;
+  justify-content: center;
   align-items: flex-start;
 }
 .header__main {
@@ -23,14 +24,17 @@
   color: tomato;
 }
 .header__subtitle {
+  background-color: rgba(255, 99, 71, 0.5);
+  font-weight: bold;
+  max-width: 400px;
   font-size: 2em;
   text-align: right;
 }
 .navigation {
   margin-bottom: 100px;
   position: fixed;
+  left: 0;
   width: 100%;
-  max-width: 1440px;
   padding: 15px 0;
   background: rgb(2, 0, 36);
   background: linear-gradient(
