--- a/src/components/pages/Main/Main.css
+++ b/src/components/pages/Main/Main.css
@@ -12,50 +12,52 @@
 .main__list {
   max-width: 300px;
   margin: 0 auto;
+  padding: 5px;
 }
 .main__list > li {
   position: relative;
   font-size: 2em;
   margin-bottom: 1em;
-  border-bottom: 2px solid tomato;
+  border-bottom: 9px solid tomato;
+  box-shadow: 5px 5px 10px 5px #000;
   transition: 0.3s;
 }
 .main__list > li:nth-child(1):after {
   position: absolute;
-  bottom: -2px;
-  left: 0;
+  bottom: -7px;
+  left: 2px;
   width: 98%;
   content: '';
-  height: 2px;
-  background-color: springgreen;
+  height: 5px;
+  background-color: rgb(0, 255, 128);
   animation: 3s skillsForHtml ease-in-out;
 }
 .main__list > li:nth-child(2):after {
   position: absolute;
-  bottom: -2px;
-  left: 0;
+  bottom: -7px;
+  left: 2px;
   content: '';
-  height: 2px;
+  height: 5px;
   width: 90%;
   background-color: springgreen;
   animation: 3s skillsForCss ease-in-out;
 }
 .main__list > li:nth-child(3):after {
   position: absolute;
-  bottom: -2px;
-  left: 0;
+  bottom: -7px;
+  left: 2px;
   content: '';
-  height: 2px;
+  height: 5px;
   width: 50%;
   background-color: springgreen;
   animation: 3s skillsForJs ease-in-out;
 }
 .main__list > li:nth-child(4):after {
   position: absolute;
-  bottom: -2px;
-  left: 0;
+  bottom: -7px;
+  left: 2px;
   content: '';
-  height: 2px;
+  height: 5px;
   width: 15%;
   background-color: springgreen;
   animation: 3s skillsForReact ease-in-out;
