--- a/src/components/pages/Skills/Skills.css
+++ b/src/components/pages/Skills/Skills.css
@@ -7,7 +7,7 @@ article.accordion {
   display: block;
   width: 31em;
   margin: 0 auto;
-  background-color: floralwhite;
+  background-color: rgba(255, 250, 240, 0.05);
   overflow: auto;
   border-radius: 5px;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
@@ -19,8 +19,8 @@ article.accordion section {
   width: 2em;
   height: 12em;
   margin: 0.5em 0 0.5em 0.5em;
-  color: #333;
-  background-color: #333;
+  color: black;
+  background-color: white;
   overflow: hidden;
   border-radius: 3px;
 }
@@ -35,7 +35,7 @@ article.accordion section h2 {
   text-indent: 1em;
   padding: 0;
   margin: 0;
-  color: #ddd;
+  color: black;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
   -ms-transform-origin: 0 0;
@@ -59,13 +59,13 @@ article.accordion section:target {
   width: 20em;
   padding: 0 1em;
   color: #333;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.103);
 }
 article.accordion section:target h2 {
   position: static;
   font-size: 1.3em;
   text-indent: 0;
-  color: #333;
+  color: #fff;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
@@ -80,7 +80,9 @@ article.accordion section h2 {
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
-
+ul {
+  color: white;
+}
 @media (max-width: 528px) {
   article.accordion {
     width: 19em;
