--- a/src/components/pages/Skills/Skills.css
+++ b/src/components/pages/Skills/Skills.css
@@ -1,5 +1,5 @@
 .skills__title {
-  padding: 40px;
+  padding: 25px;
   font-size: 4em;
   text-align: center;
 }
@@ -7,10 +7,11 @@ ul {
   color: white;
 }
 .horizontal-click {
+  font-size: 1.5em;
   background-color: rgba(204, 204, 204, 0.1);
   box-shadow: 5px 5px 15px 3px #000000;
   max-width: 300px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   color: #ccc;
 }
 .horizontal-click [name='vkl'] {
@@ -45,4 +46,8 @@ ul {
   cursor: pointer;
 }
 @media (min-width: 815px) {
+  .horizontal-click {
+    font-size: 2em;
+    max-width: 700px;
+  }
 }
