background styles for skills

--- a/src/components/pages/Footer/footer.css
+++ b/src/components/pages/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: rgb(129, 52, 38);
+  background-color: #ccc;
   width: 100%;
   display: flex;
   justify-content: space-around;
